--- a/themes/original/scss/_common.scss
+++ b/themes/original/scss/_common.scss
@@ -2242,6 +2242,11 @@ input#auto_increment_opt {
   }
 }
 
+.table_results {
+  display: block;
+  overflow: auto;
+}
+
 .modal-copy input {
   display: block;
   width: 100%;
