--- a/themes/pmahomme/scss/_common.scss
+++ b/themes/pmahomme/scss/_common.scss
@@ -2639,6 +2639,11 @@ input#auto_increment_opt {
   }
 }
 
+.table_results {
+  display: block;
+  overflow: auto;
+}
+
 .modal-copy input {
   display: block;
   width: 100%;
